# nclique

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  CmakeLists.txt  DartConfiguration.tcl  README.md  StanfordClique.txt  a  a.edge  a.edge_34_NUCLEI  a.oout  a.txt  adj_list.txt  b  b.tmp.tree  b.tree  b.txt  bench  bench.cpp  bench_sets  benchmark  benchmark.cpp  benchmark_index.cpp  bk.cpp  case.txt_24_K  com-dblp.edges_13_K  com-dblp.edges_14_K  com-dblp.edges_23_K  com-dblp.edges_24_K  com-dblp.edges_34_K  compare_csr_adj_dynamic  compare_csr_adj_dynamic.cpp  compare_value_vs_pointer  compare_value_vs_pointer.cpp  dblpClique.txt  dblp_removed.edge  dblp_removed.edge_24_K  default.profraw  demo  faceBookClique.txt  (+32 more)
Testing/Temporary/: CTestCostData.txt
graphs/: email-Enron.edges.core  email-Enron.edges.sorted
oneTBB/: CPackConfig.cmake  CPackSourceConfig.cmake
oneTBB/appleclang_16.0_cxx11_64_release/: conformance_allocators  conformance_arena_constraints  conformance_async_node  conformance_blocked_nd_range  conformance_blocked_range  conformance_blocked_range2d  conformance_blocked_range3d  conformance_broadcast_node  conformance_buffer_node  conformance_collaborative_call_once  conformance_combinable  conformance_composite_node  conformance_concurrent_hash_map  conformance_concurrent_lru_cache  conformance_concurrent_map  conformance_concurrent_priority_queue  conformance_concurrent_queue  conformance_concurrent_set  conformance_concurrent_unordered_map  conformance_concurrent_unordered_set  conformance_concurrent_vector  conformance_continue_node  conformance_enumerable_thread_specific  conformance_function_node  conformance_global_control  conformance_graph  conformance_indexer_node  conformance_input_node  conformance_join_node  conformance_limiter_node  conformance_multifunction_node  conformance_mutex  conformance_overwrite_node  conformance_parallel_for  conformance_parallel_for_each  conformance_parallel_invoke  conformance_parallel_pipeline  conformance_parallel_reduce  conformance_parallel_scan  conformance_parallel_sort  (+91 more)
oneTBB/src/tbb/: tbb.pc
pivoter/: compare_csr_adj  compare_csr_adj.cpp  new_small_garph.edges_24_K  out.txt
pivoter/proj1/autotest_out_q2/: 2174357_q2_autotest.py  3378533_q2_autotest.py  3399789_q2_autotest.py  3451348_q2_autotest.py  3458905_q2_autotest.py  5011525_q2_autotest.py  5089022_q2_autotest.py  5098800_q2_autotest.py  5129375_q2_autotest.py  5135098_q2_autotest.py  5190542_q2_autotest.py  5191602_q2_autotest.py  5194623_q2_autotest.py  5218676_q2_autotest.py  5223809_q2_autotest.py  5242782_q2_autotest.py  5253852_q2_autotest.py  5254061_q2_autotest.py  5255845_q2_autotest.py  5270593_q2_autotest.py  5281376_q2_autotest.py  5309765_q2_autotest.py  5324147_q2_autotest.py  5324155_q2_autotest.py  5334912_q2_autotest.py  5341069_q2_autotest.py  5346037_q2_autotest.py  5349040_q2_autotest.py  5353746_q2_autotest.py  5356286_q2_autotest.py  5359871_q2_autotest.py  5360671_q2_autotest.py  5365220_q2_autotest.py  5380003_q2_autotest.py  5390453_q2_autotest.py  5391112_q2_autotest.py  5393680_q2_autotest.py  (+543 more)
pivoter/python/: graph_tools.py  sanitize.py
python/: BK.py  CliqueUpdate.py  a  b  datasetCheck.py  drawBar.py  findMClique.py  find_bad_case.py  gen_clique_edges.py  gen_graph.py  generate_nCr.py  graph_tools.py  interesting_case_1.txt  mytree.py  oscillate_new  sanitize.py  sctTree.py
python/draw/: cliqueCount.py
python/experiment/: LeafCliqueCount.py  experiment_data1.csv  make_plots.py  make_plots_bazel.py  make_plots_compare_both.py  make_plots_nuclear.py  make_plots_scal.py  plot_stress_tests.py  summarize_experiments.py  toTable.py
results/: com-dblp_V.txt  email-Enron_10_V.txt  email-Enron_2_V.txt  email-Enron_6_V.txt  email-Enron_V.txt  small_garph_E.txt  small_garph_V.txt  small_garph_V_stat.txt
src/: BCtest.cpp  Global.h  LinkedList.c  LinkedList.cpp  LinkedList.h  MemoryManager.c  MemoryManager.cpp  MemoryManager.h  SDCT.cpp  degeneracy_algorithm_cliques_A.c  degeneracy_algorithm_cliques_E.c  degeneracy_algorithm_cliques_V.c  degeneracy_algorithm_cliques_V.cpp  degeneracy_algorithm_cliques_V.h  degeneracy_algorithm_cliques_VedgeGraph.cpp  degeneracy_cliques.c  degeneracy_cliques.cpp  degeneracy_helper.c  degeneracy_helper.cpp  degeneracy_helper.h  main.cpp  misc.c  misc.c_bkp  misc.cpp  misc.h
src/BK/: BronKerbosch.cpp  BronKerbosch.hpp  BronKerboschRmEdge.hpp  BronKerboschRmRClique.hpp  SDCT.hpp
src/Global/: Global.cpp  Global.h  ostreamOverload.hpp
src/NucleusDecomposition/: NCliqueCoreDecomposition.cpp  NCliqueCoreDecomposition.h  NCliqueCoreDecompositionLeaf.cpp  NCliqueCoreDecompositionPar.cpp  NCliqueEdgeCoreDecomposition.cpp  NCliqueEdgeCoreDecompositionPlus.cpp  NCliqueEdgeCoreDecompositionPlusSet.cpp  NCliqueEdgeCoreDecompositionPlusSetKCore.cpp  NCliqueEdgeCoreDecompositionSet.cpp  NCliqueVertexCoreDecomposition.cpp  NucleusCoreDecomposition.cpp  NucleusCoreDecomposition.h  NucleusCoreDecompositionBase.cpp  NucleusCoreDecompositionHierarchy.cpp  NucleusCoreDecompositionRemoveSclique.cpp  NucleusCoreDecompositionRemoveScliqueOpt.cpp  NucleusCoreDecompositionRemoveScliquePar.cpp
src/dataStruct/: Bitset.hpp  BooPHF.h  CSR.cpp  CSR.hpp  CliqueHashMap.h  CliqueMap.hpp  StaticVector.cpp  StaticVector.h  coreDisJoin.hpp  disJionSet.hpp  disJoinSet.hpp
src/debug/: EdgeSet.h
src/graph/: DynamicBipartiteGraph.cpp  DynamicBipartiteGraph.hpp  DynamicGraph.cpp  DynamicGraph.h  DynamicGraphSet.cpp  DynamicGraphSet.h  EdgeList.cpp  EdgeList.h  Graph.h  graph.cpp
src/tree/: BronKerbosch.cpp  BronKerbosch.h  MultiBranchTree.cpp  MultiBranchTree.h  NCliqueCoreDecomposition.cpp  NCliqueCoreDecomposition.h  NCliqueCoreDecompositionLeaf.cpp  NCliqueCoreDecompositionPar.cpp  NCliqueCoreDecompositionParHash.cpp  NCliqueEdgeCoreDecomposition.cpp  NCliqueEdgeCoreDecompositionPlus.cpp  NCliqueEdgeCoreDecompositionPlusSet.cpp  NucleusCoreDecomposition.cpp  NucleusCoreDecomposition.h  NucleusCoreDecompositionBase.cpp  multiBranchTree.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  test_bronkerbosch.cpp
(+15 files in other folders)
